--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+## Project deliverables
+report.pdf
+report-submission.pdf
+report-submission.tex
+
 ## Core latex/pdflatex auxiliary files:
 *.aux
 *.lof
@@ -299,4 +304,3 @@ TSWLatexianTemp*
 # option is specified. Footnotes are the stored in a file with suffix Notes.bib.
 # Uncomment the next line to have this generated file ignored.
 #*Notes.bib
-
